--- a/server/client/src/styles/LayoutStyles.css
+++ b/server/client/src/styles/LayoutStyles.css
@@ -10,7 +10,7 @@
   min-height: 100%;
   width: 300px;
   border-radius: 5px;
-  background-color: rgb(51, 1, 1);
+  background-color: rgba(2, 51, 210, 0.774);
   box-shadow: 0 0 2px gray;
   margin-right: 20px;
   color: white;
