--- a/server/client/src/pages/PageNotFound/NotFound.css
+++ b/server/client/src/pages/PageNotFound/NotFound.css
@@ -3,7 +3,7 @@
   justify-content: center; /* Center align the items horizontally */
   align-items: center; /* Center align items vertically */
   height: 100vh;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  background: linear-gradient(135deg, #7ab3d6, #fad0c4);
   color: #fff;
   text-align: center;
   padding: 20px;
